<resources>
<string name="app_name">My Places</string>
<string name="show_map">Show Map</string>
<string name="new_place">New Place</string>
<string name="my_places_list">My Places</string>
<string name="info">Info</string>
<string name="about">About</string>
<string name="about_content">\
    <i>My places</i> is the application that will help you remember characteristics and locations of
        your favorite places. It will be able to show your places on the map and enable you to share
        them with you friends. Each week this application will be better and better and you will earn
        <i>points</i> from your teaching assistant.
    </string>
<string name="OK">OK</string>
<string name="title_activity_my_places_list">My Places List</string>
<string name="title_activity_edit_my_place">Edit My Place</string>
<string name="title_activity_view_my_place">View My Place</string>
<string name="title_activity_my_places_maps">Map</string>
<string name="editmyplace_name_label">Name:</string>
<string name="editmyplace_desc_label">Description:</string>
<string name="editmyplace_lat_label">Latitude:</string>
<string name="editmyplace_lon_label">Longitude:</string>
<string name="editmyplace_cancel_label">Cancel</string>
<string name="editmyplace_location_label">Get Location</string>
<string name="viewmyplace_finished_button">OK</string>
<string name="title_activity_maps">Map</string>
</resources>
