<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mosis.myplaces.MainActivity" >
    <item
        android:id="@+id/show_map_item"
        android:orderInCategory="100"
        android:title="@string/show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_map_black_24dp" />
    <item
        android:id="@+id/new_place_item"
        android:orderInCategory="100"
        android:title="@string/new_place"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_add_black_24dp" />
    <item
        android:id="@+id/my_places_list_item"
        android:orderInCategory="100"
        android:title="@string/my_places_list"
        app:showAsAction="never"
        android:icon="@drawable/baseline_list_black_24dp" />
    <item
        android:id="@+id/info"
        android:orderInCategory="100"
        android:title="@string/info"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_info_black_24dp" />
    <item
        android:id="@+id/about_item"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"
        android:icon="@drawable/baseline_info_black_24dp" />
</menu>
